<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">movietracker</string>

  <!-- Movie details -->
  <string name="backdrop_image_description">Movie backdrop image</string>
  <string name="poster_image_description">Poster image</string>
  <string name="plot_summary">Plot Summary</string>
  <string name="release_date">Release Date</string>
  <string name="genres">Genres</string>
  <string name="runtime">Runtime</string>
  <string name="spoken_languages">Spoken Languages</string>
  <string name="status">Status</string>
  <string name="original_language">Original Language</string>
  <string name="original_title">Original Title</string>
  <string name="adult">Adult</string>
  <string name="production_companies">Production Companies</string>
  <string name="production_countries">Production Countries</string>
  <string name="tagline">Tagline</string>
  <string name="homepage">Homepage</string>
  <string name="imdb_id">IMDb ID</string>
  <string name="budget">Budget</string>
  <string name="revenue">Revenue</string>

  <!-- TV show details -->
  <string name="first_air_date">First Air Date</string>
  <string name="overview">Overview</string>
  <string name="number_of_seasons">Number of Seasons</string>
  <string name="number_of_episodes">Number of Episodes</string>
  <string name="created_by">Created By</string>
  <string name="networks">Networks</string>


  <!-- Error dialogue -->
  <string name="ed_title">An issue occurred</string>
  <string name="ed_text">Something went wrong while loading.\nThis could be due to a network issue.\nPlease check your internet connection, and if the problem persists, \nplease try again later.</string>

  <!-- Credits dialogue -->
  <string name="cdiag_title">Credits</string>
  <string name="cdiag_text">This project was developed as final assignment for the App Development course at Thomas More.\n\nCreated by Gilles Van pellicom.</string>

  <!-- Project dialogue -->
  <string name="pdiag_title">App Polish</string>
  <string name="pdiag_text">\nSince API and DB are used, failed requests result in error dialogue and a reload button appearing. Can be tested by disabling network.\n\nBottom nav bar active indicator remains accurate even with concurrent back-stacks.\n\nIf you tap an active item in the bottom nav bar, it returns that back-stack to an initial state.\n\nThe loading spinner and reload button make everything in the background un-interactable. External app inputs such as the back command are also disabled in this state.\n\nMaterial 3 theme system support: light and dark theme OOTB.</string>

  <!-- BindingAdapters-->
  <string name="binding_runtimeText">%1$dh %2$dm</string>
  <string name="binding_moneyText">$%1$s</string>
  <string name="main_reload">Reload</string>
  <string name="home_go_to_home_fragment">Go to home Fragment</string>
  <string name="fas_search_movies_or_series">Search movies or series</string>
  <string name="movies">Movies</string>
  <string name="tv_shows">TV shows</string>

  <!-- Liked items -->
  <string name="added_to_liked">%1$s added to liked</string>
  <string name="removed_from_liked">%1$s removed from liked</string>
  <string name="undo">Undo</string>
</resources>