<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <import type="android.view.View" />

    <variable
        name="movie"
        type="com.example.movietracker.api.MovieResponse" />
  </data>

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:clipToPadding="false"
      android:paddingBottom="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

      <!-- Tagline -->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/tagline"
          android:textAppearance="?attr/textAppearanceHeadline6" />

      <TextView
          android:id="@+id/taglineText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:textAppearance="?attr/textAppearanceBody1"
          app:taglineText="@{movie.tagline}" />

      <!-- Status -->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:text="@string/status"
          android:textAppearance="?attr/textAppearanceHeadline6" />

      <TextView
          android:id="@+id/statusText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:text="@{movie.status}"
          android:textAppearance="?attr/textAppearanceBody1" />

      <!-- Original Language -->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:text="@string/original_language"
          android:textAppearance="?attr/textAppearanceHeadline6" />

      <TextView
          android:id="@+id/originalLanguageText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:text="@{movie.originalLanguage}"
          android:textAppearance="?attr/textAppearanceBody1" />

      <!-- Original Title -->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:text="@string/original_title"
          android:textAppearance="?attr/textAppearanceHeadline6" />

      <TextView
          android:id="@+id/originalTitleText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:text="@{movie.originalTitle}"
          android:textAppearance="?attr/textAppearanceBody1" />

      <!-- Adult -->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:text="@string/adult"
          android:textAppearance="?attr/textAppearanceHeadline6" />

      <TextView
          android:id="@+id/adultText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:text="@{movie.adult ? `Yes` : `No`}"
          android:textAppearance="?attr/textAppearanceBody1" />

      <!-- Homepage -->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:text="@string/homepage"
          android:textAppearance="?attr/textAppearanceHeadline6" />

      <TextView
          android:id="@+id/homepageText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:autoLink="web"
          android:text="@{`Homepage: ` + movie.homepage}"
          android:textAppearance="?attr/textAppearanceBody1"
          android:visibility="@{movie.homepage != null ? View.VISIBLE : View.GONE}" />

      <!-- IMDb ID -->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:text="@string/imdb_id"
          android:textAppearance="?attr/textAppearanceHeadline6" />

      <TextView
          android:id="@+id/imdbText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:autoLink="web"
          android:text="@{`IMDb: https://www.imdb.com/title/` + movie.imdbId}"
          android:textAppearance="?attr/textAppearanceBody1"
          android:visibility="@{movie.imdbId != null ? View.VISIBLE : View.GONE}" />

      <!-- Production Companies -->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:text="@string/production_companies"
          android:textAppearance="?attr/textAppearanceHeadline6" />

      <TextView
          android:id="@+id/companiesText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:textAppearance="?attr/textAppearanceBody1"
          app:companiesText="@{movie.productionCompanies}" />

      <!-- Production Countries -->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:text="@string/production_countries"
          android:textAppearance="?attr/textAppearanceHeadline6" />

      <TextView
          android:id="@+id/countriesText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:textAppearance="?attr/textAppearanceBody1"
          app:countriesText="@{movie.productionCountries}" />

      <!-- Budget -->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:text="@string/budget"
          android:textAppearance="?attr/textAppearanceHeadline6" />

      <TextView
          android:id="@+id/budgetText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:textAppearance="?attr/textAppearanceBody1"
          app:moneyText="@{movie.budget}" />

      <!-- Revenue -->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:text="@string/revenue"
          android:textAppearance="?attr/textAppearanceHeadline6" />

      <TextView
          android:id="@+id/revenueText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:textAppearance="?attr/textAppearanceBody1"
          app:moneyText="@{movie.revenue}" />
    </LinearLayout>
  </ScrollView>
</layout>